# file_organizer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Organized/Archives/Gz/: 2025
Organized/Audio/Mp3/: 2025
Organized/Code/HTML/: 2025_1  2025_2
Organized/Code/Rust/: 2025
Organized/Documents/Pdf/: 2025_13  2025_14  2025_3  2025_7
Organized/Documents/Spreadsheet/: 2025
Organized/Documents/Word/: 2025  2025_1
Organized/Images/Gif/: 2025
Organized/Images/Jpeg/: 2025  2025_2
Organized/Images/Png/: 2025
logs/: file_organizer.log.2025-09-08  file_organizer.log.2025-09-09
rules/: default_rules.json
src/: classifiers.rs  engine.rs  errors.rs  lib.rs  main.rs  mover.rs
src/classifiers/: archive_classifier.rs  audio_classifier.rs  classifier.rs  code_classifier.rs  code_const.rs  docs_classifier.rs  executable_classifier.rs  executables_const.rs  generic.rs  image_classifier.rs  metadata.rs  path_builder.rs  registry.rs  video_classifier.rs
src/engine/: classifier.rs  config.rs  hasher.rs  index.rs  organizer.rs  reverter.rs  scanner.rs  utils.rs
src/interface/: cli.rs
src/mover/: conflict_resolver.rs  file_mover.rs  stats.rs
tests/: archive_classifier_tests.rs  audio_classifier_tests.rs  code_classifier_tests.rs  db_tests.rs  docs_classifier_tests.rs  executable_classifier_tests.rs  hasher_tests.rs  image_classifier_tests.rs  pathbuilder_tests.rs  registry_tests.rs  reverter_tests.rs  test_utils.rs  video_classifier_tests.rs
