[package]
name = "file_organizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
infer = "0.19.0"
lazy_static = "1.5.0"
lru = "0.16.0"
mime_guess = "2.0.5"
notify = "8.2.0"
redb = "2.6.3"
regex = "1.11.1"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sled = { version = "0.34.7", optional = true }
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
