[package]
name = "file_organizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
blake3 = "1.8.2"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.0.0"
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
infer = "0.19.0"
libc = "0.2.175"
lru = "0.16.0"
mime_guess = "2.0.5"
notify = "8.2.0"
num_cpus = "1.17.0"
once_cell = "1.21.3"
phf = { version = "0.13.1", features = ["macros"] }
proptest = "1.7.0"
rayon = "1.11.0"
redb = "2.6.3"
regex = "1.11.1"
rustix = "1.0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sled = { version = "0.34.7", optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
walkdir = "2.5.0"
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }
